--- a/public/index.html
+++ b/public/index.html
@@ -10,26 +10,45 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+    <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
+    <!-- <script src="http://code.jquery.com/jquery-latest.js"></script> -->
     <script>
+      function BoxshowF(stateP, num) {
+        $('.UDbox' + stateP + num).show()
+        $('.listIndivide' + stateP + num).css('background', 'rgb(219, 219, 219)')
+      }
+      function BoxhideF(stateP, num) {
+        $('.UDbox' + stateP + num).hide()
+        $('.listIndivide' + stateP + num).css('background', 'white')
+      }
+      function UDshowF(stateP, num) {
+        $('.UDbox' + stateP + num).show()
+        $('.listIndivide' + stateP + num).css('background', 'rgb(219, 219, 219)')
+        $('.UboxSelect' + stateP + num).show()
+        $('.DboxSelect' + stateP + num).show()
+      }
+      function UDhideF(stateP, num) {
+        $('.UDbox' + stateP + num).hide()
+        $('.listIndivide' + stateP + num).css('background', 'white')
+        $('.UboxSelect' + stateP +num).hide()
+        $('.DboxSelect' + stateP + num).hide()
+      }
+
       function AddF(stateP, num) {
-        console.log(num)
         var valueInput = $('#' + stateP + 'Input' + num).val()
-        document.getElementById(stateP + num).innerHTML = '<div id="' + stateP + num + '" class="listIndivide" onClick="UDF(\'' + stateP + '\',\'' + valueInput + '\',' + num  + ')">' + valueInput + '</div>'
+        document.getElementById(stateP + num).innerHTML = 
+        '<div class="UboxSelect UboxSelect' + stateP + num + '" onClick="UpdateF(\'' + stateP + '\',\'' + valueInput + '\',' + num + ')" onMouseOver="UDshowF(\'' + stateP + '\',' + num + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + num + ')">수정</div>' +
+        '<div class="DboxSelect DboxSelect' + stateP + num + '" onClick="DeleteF(\'' + stateP + '\',' + num + ')" onMouseOver="UDshowF(\'' + stateP + '\',' + num + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + num + ')">삭제</div>' +
+        '<div class="listIndivide listIndivide' + stateP + num + '" onMouseOver="BoxshowF(\'' + stateP + '\',' + num + ')" onMouseOut="BoxhideF(\'' + stateP + '\',' + num + ')">' + 
+          '<div class="value">' + valueInput + '</div>' + 
+          '<div class="UDbox UDbox' + stateP + num + '" onMouseOver="UDshowF(\'' + stateP + '\',' + num + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + num + ')">' + 
+          '</div>' + 
+        '</div>' 
         var none = JSON.parse(localStorage.getItem(stateP))
         for (var i = 0; i < none.length; i++) {
           if ((num-1) === i) {
@@ -37,32 +56,79 @@
               value: valueInput,
               state: stateP,
             }
+            break;
           }
         }
         localStorage.setItem(stateP, JSON.stringify(none));
         console.log(none)
       }
-      function UDF(stateP, valueInput, num) {
-        document.getElementById(stateP + num).innerHTML = '<div class="listIndivide" onClick="AddF(\'' + stateP + '\',' + num + ')"><input id="' + stateP + 'Input' + num + '" class="listIndivideInput" type="text" placeholder="이름을 입력하세요"/></div>'
+
+      function UpdateF(stateP, valueInput, num) {
+        $('.UboxSelect' +num).hide()
+        $('.DboxSelect' + num).hide()
+        document.getElementById(stateP + num).innerHTML = 
+        '<div class="listIndivide listIndivide' + stateP + num + '" onClick="AddF(\'' + stateP + '\',' + num + ')" onMouseOver="BoxshowF(\'' + stateP + '\',' + num + ')" onMouseOut="BoxhideF(\'' + stateP + '\',' + num + ')">' + 
+          '<input id="' + stateP + 'Input' + num + '" class="listIndivideInput" type="text" placeholder="이름을 입력하세요"/ onMouseOver="BoxshowF(\'' + stateP + '\',' + num + ')" onMouseOut="BoxhideF(\'' + stateP + '\',' + num + ')">' +
+          '<div class="UDbox UDbox' + stateP + num + '">' + 
+          '</div>' + 
+        '</div>'
         $('#' + stateP + 'Input' + num).val(valueInput)
         $('#' + stateP + 'Input' + num).focus()
+      }
+      function DeleteF(stateP, num) {
+        var none = JSON.parse(localStorage.getItem(stateP))
+        none.splice(num-1, 1)
+        localStorage.setItem(stateP, JSON.stringify(none));
+        console.log(none)
+        
+        for (var i = num-1; i < none.length; i++) {
+          document.getElementById(stateP + (i+1)).innerHTML = 
+          '<div class="UboxSelect UboxSelect' + stateP + (i+1) + '" onClick="UpdateF(\'' + stateP + '\',\'' + none[i].value + '\',' + (i+1) + ')" onMouseOver="UDshowF(\'' + stateP + '\',' + (i+1) + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + (i+1) + ')">수정</div>' +
+          '<div class="DboxSelect DboxSelect' + stateP + (i+1) + '" onClick="DeleteF(\'' + stateP + '\',' + (i+1) + ')" onMouseOver="UDshowF(\'' + stateP + '\',' + (i+1) + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + (i+1)+ ')">삭제</div>' +
+          '<div class="listIndivide listIndivide' + stateP + (i+1) + '" onMouseOver="BoxshowF(\'' + stateP + '\',' + (i+1) + ')" onMouseOut="BoxhideF(\'' + stateP + '\',' + (i+1) + ')">' + 
+            '<div class="value">' + none[i].value + '</div>' + 
+            '<div class="UDbox UDbox' + stateP + (i+1) + '" onMouseOver="UDshowF(\'' + stateP + '\',' + (i+1) + ')" onMouseOut="UDhideF(\'' + stateP + '\',' + (i+1) + ')">' + 
+            '</div>' + 
+          '</div>' 
+        }
+        document.getElementById(stateP + (none.length+1)).remove()
+      }
+
+      function DragStartF(e) {
+        console.log('start')
+        e.dataTransfer.setData("text", "<p>a</p>")
+        // var html = ''; 
+        // $('.selected').each(function(){ 
+        //   html += 
+        //   '<li class="list">a</li>'; 
+        // });
+        // e.dataTransfer.setData('text',html);
+
+        // e.target.style.opacity = "0.5"
+      }
+      function DragF(e) {
+        // console.log('drag')
+        // if ($('#done').mouseover()){
+        //   console.log('a')
+        //   $('#readyhr').css('display', 'block')
+        // }
+        // else 
+        //   $('#readyhr').css('display', 'none')
+      }
+      function DragEndF(e) {
+        console.log('end')
+        var data = e.dataTransfer.getData("text")
+        e.target.appendChild(document.getElementById('a'))
+      }
+      function DropMF(e) {
+        console.log('dropM')
       }
     </script>
 
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
+
